--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CameraPreviewActivity"
-            android:theme="@style/AppThemeFullScreen">
 
+        <activity android:name=".CameraPreviewActivity"
+            android:theme="@style/AppThemeFullScreen"
+            android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
     </application>
 
